Demos: Fix grid right border visibility in demos Fixes #8

--- a/css/demos.css
+++ b/css/demos.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Helvetica Neue Light', 'Open Sans', Helvetica;
     font-size: 14px;
     font-weight: 300;
+    padding: 1px;
 }
 
 h1 {
